client/css/videos.css
#videosContent{height:100%;overflow:scroll;padding:0 20px;}
#videosContent.isPlaying {height:50%;}

.video {cursor: pointer;}
  .video td.videos-likes {width:30px;text-align:center;font-size:11px;line-height:12px;}
    .video td.videos-likes a {padding-top:12px;display:block;color:#777;}
  .video td.videos-preview {height:50px;width:50px;}
    .video td.videos-preview .img-container {height:50px;width:50px;overflow:hidden;border:1px solid #ccc;background:url(/img/play.png)}
      .video td.videos-preview img {height:50px;max-width:none;}
  .video td.videos-playing {width:30px;text-align:center;line-height:50px;}
  .video td.videos-added-by {vertical-align:middle;font-size:12px;text-align:center;color:#777;}
  .video td.videos-description {}
    .video td.videos-description .video-description-title {font-size:14px;margin-top:5px;}
    .video td.videos-description .video-description-origin {font-size:12px;color:#777;}

  .video td {background:#f3f3f3;}
    .video td.videos-preview .img-container {border-color:#ddd}
    .video td.videos-preview img {opacity:0}
  .video.not-playing td {background:#fff;}
    .video.not-playing td.videos-preview img {opacity:1}
  .video.not-playing:hover td {background:#f9f9f9;}
    .video.not-playing:hover td.videos-preview img {opacity:0.3}

#search-video-modal{}
  #search-video-modal .video td.videos-preview .img-container {background:url(/img/add.png)}
  #search-video-modal .video.video-added td.videos-preview .img-container {background:url(/img/added.png)}
  #search-video-modal .video.not-playing.video-added td.videos-preview img{opacity:0.3}
  #search-video-result {height:300px;overflow:auto;}


#add-video-modal{}
  #add-video-modal form{margin:0}
  #add-video-modal .modal-body{padding:70px 0;text-align:center}

.shared-users {overflow: hidden;max-height:104px;font-size:0;margin-top:20px;}
  .shared-users img {height:50px;width:50px;margin:0 4px 4px 0;}
  
.video-title {margin-top: 15px;}
  .video-title img{width:50px;height:50px;float:left;margin-right:6px;margin-top:6px;}
  .video-title h3{margin:0;padding:0;margin-bottom: -10px;}
  .video-title h3 span{font-size:0.7em;font-weight:normal;}
  .video-title a,.video-title span{font-size: 12px;padding-right:10px}
  .video-title h3 span.playlistName{font-size:inherit;font-weight:inherit;padding-right:0;}
  .video-title .dropdown span{padding-right:0}

.playlist-title h3{margin-left:65px;}

h2.no-video {text-align:center;color:#ddd;padding:30px 0;}

#edit-playlist-name{display:none;margin: 0;}
  #edit-playlist-name .btn{padding: 2px 6px;}

.sort-by-container {margin:24px 0 0}
.fullscreen .sort-by-container {display:none}
  .sort-by-container span{padding-right:0}

.privacy {margin-left:-12px;}
.fullscreen .privacy {display:none}
  .privacy span{padding-right:0}

.share-icon{display:block;float:left;width:16px;height:16px;margin:-2px 5px 0 0;background:url(/img/share-icons.png) no-repeat;}
.share-icon.facebook{background-position:0 0;}
.share-icon.twitter{background-position:-16px 0;}
.share-icon.email{background-position:-32px 0;}
.share-icon.google{background:url(//ssl.gstatic.com/images/icons/gplus-16.png) no-repeat top left;}

